some more minor updates